--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -48,6 +48,7 @@
         <toolWindow id="DevToys" secondary="false" icon="ilovedevtoys/toolWindowIconSimple.svg" anchor="right"
                     factoryClass="lermitage.intellij.ilovedevtoys.toolwindow.DevToysToolWindowFactory" order="after Notifications"/>
         <applicationService serviceImplementation="lermitage.intellij.ilovedevtoys.toolwindow.options.JSONStringToolOptions"/>
+        <applicationService serviceImplementation="lermitage.intellij.ilovedevtoys.toolwindow.options.DevToysToolWindowOptions"/>
     </extensions>
 
 </idea-plugin>
